Allow selecting any loader

--- a/src/main/resources/i18n/lang.properties
+++ b/src/main/resources/i18n/lang.properties
@@ -1,7 +1,7 @@
 modrinth.access.failed=Failed to access Modrinth. Please check your internet connection.
 done=Done!
 select.installation.folder=Select installation folder
-include.unsupported.minecraft=Include unsupported Minecraft versions
+include.unsupported.minecraft=Include unsupported Minecraft versions/loaders
 include.non.performance.features=Include non-performance features
 browse=Browse...
 install=Install!
@@ -10,6 +10,7 @@ installation.success=Installation success!
 installation.failed=Installation failed.
 minecraft.version=Minecraft version: 
 pack.version=Pack version: 
+mod.loader=Mod loader: 
 install.to=Install to: 
 window.title={0} Installer
 creating.version.folder=Creating version folder
