feat: tooltip for unsupported checkbox
just a little tooltip to let users know that unsupported versions could be severely out of date :p

--- a/src/main/resources/i18n/lang.properties
+++ b/src/main/resources/i18n/lang.properties
@@ -2,6 +2,7 @@ modrinth.access.failed=Failed to access Modrinth. Please check your internet con
 done=Done!
 select.installation.folder=Select installation folder
 include.unsupported.minecraft=Include unsupported Minecraft versions/loaders
+include.unsupported.minecraft.tooltip=Unsupported Minecraft versions may not have the latest optimizations, missing features, and could be very out of date. We typically do not offer help for unsupported versions.
 include.non.performance.features=Include non-performance features
 browse=Browse...
 install=Install!
